force-app/main/default/objects/Activity/fields/FNS_ApplicationStageName__c.field-meta.xml
<CustomField>
    <fullName>FNS_ApplicationStageName__c</fullName>
    <label>Application Stage Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>