force-app/main/default/objects/Activity/fields/FNS_Borrower__c.field-meta.xml
<CustomField>
    <fullName>FNS_Borrower__c</fullName>
    <formula>Owner:User.FirstName  + &#39; &#39; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower</label>
    <type>Text</type>
</CustomField>