force-app/main/default/objects/Activity/fields/FNS_Comments__c.field-meta.xml
<CustomField>
    <fullName>FNS_Comments__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>