force-app/main/default/objects/Activity/fields/FNS_CustomerExtIds__c.field-meta.xml
<CustomField>
    <fullName>FNS_CustomerExtIds__c</fullName>
    <label>Customer External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>