force-app/main/default/objects/Activity/fields/FNS_CustomerRecordIds__c.field-meta.xml
<CustomField>
    <fullName>FNS_CustomerRecordIds__c</fullName>
    <label>Customer Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>