force-app/main/default/objects/Activity/fields/FNS_DueDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_DueDate__c</fullName>
    <label>Due Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>