force-app/main/default/objects/Activity/fields/FNS_FinancialAccountExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialAccountExtId__c</fullName>
    <label>Financial Account Ext Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>