force-app/main/default/objects/Activity/fields/FNS_FinancialAccountTransactionId__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialAccountTransactionId__c</fullName>
    <label>Financial Account Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>