force-app/main/default/objects/Activity/fields/FNS_FinancialAccountTransactionRecordId__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialAccountTransactionRecordId__c</fullName>
    <label>Financial Account Transaction Record Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>