force-app/main/default/objects/Activity/fields/FNS_FinancialProductExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_FinancialProductExtId__c</fullName>
    <label>Financial Product External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>