force-app/main/default/objects/Activity/fields/FNS_IsActive__c.field-meta.xml
<CustomField>
    <fullName>FNS_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>