force-app/main/default/objects/Activity/fields/FNS_IsCheckList__c.field-meta.xml
<CustomField>
    <fullName>FNS_IsCheckList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CheckList</label>
    <type>Checkbox</type>
</CustomField>