force-app/main/default/objects/Activity/fields/FNS_IsCSA__c.field-meta.xml
<CustomField>
    <fullName>FNS_IsCSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CSA</label>
    <type>Checkbox</type>
</CustomField>