force-app/main/default/objects/Activity/fields/FNS_IsSLAMeet__c.field-meta.xml
<CustomField>
    <fullName>FNS_IsSLAMeet__c</fullName>
    <formula>IF( IsClosed, true, if( ActivityDate &lt; TODAY() , false, true ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is SLA Meet</label>
    <type>Checkbox</type>
</CustomField>