force-app/main/default/objects/Activity/fields/FNS_IsStandard__c.field-meta.xml
<CustomField>
    <fullName>FNS_IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Standard</label>
    <type>Checkbox</type>
</CustomField>