force-app/main/default/objects/Activity/fields/FNS_IsVerified__c.field-meta.xml
<CustomField>
    <fullName>FNS_IsVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Verified</label>
    <type>Checkbox</type>
</CustomField>