force-app/main/default/objects/Activity/fields/FNS_KeepOnRefresh__c.field-meta.xml
<CustomField>
    <fullName>FNS_KeepOnRefresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keep On Refresh</label>
    <type>Checkbox</type>
</CustomField>