force-app/main/default/objects/Activity/fields/FNS_PackageExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_PackageExtId__c</fullName>
    <label>Package External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>