force-app/main/default/objects/Activity/fields/FNS_PrimaryRelationship__c.field-meta.xml
<CustomField>
    <fullName>FNS_PrimaryRelationship__c</fullName>
    <label>Primary Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>