force-app/main/default/objects/Activity/fields/FNS_PrintStatusId__c.field-meta.xml
<CustomField>
    <fullName>FNS_PrintStatusId__c</fullName>
    <label>Print Status Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>