force-app/main/default/objects/Activity/fields/FNS_Priority__c.field-meta.xml
<CustomField>
    <fullName>FNS_Priority__c</fullName>
    <label>FNS_Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_DocumentPriority</valueSetName>
    </valueSet>
</CustomField>