force-app/main/default/objects/Activity/fields/FNS_PriorityId__c.field-meta.xml
<CustomField>
    <fullName>FNS_PriorityId__c</fullName>
    <label>Priority Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>