force-app/main/default/objects/Activity/fields/FNS_Refresh__c.field-meta.xml
<CustomField>
    <fullName>FNS_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refresh</label>
    <type>Checkbox</type>
</CustomField>