force-app/main/default/objects/Activity/fields/FNS_Sequence__c.field-meta.xml
<CustomField>
    <fullName>FNS_Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>