force-app/main/default/objects/Activity/fields/FNS_SLAIndicator__c.field-meta.xml
<CustomField>
    <fullName>FNS_SLAIndicator__c</fullName>
    <label>SLA Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>