force-app/main/default/objects/Activity/fields/FNS_SLAPercentage__c.field-meta.xml
<CustomField>
    <fullName>FNS_SLAPercentage__c</fullName>
    <label>SLA Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>