force-app/main/default/objects/Activity/fields/FNS_Status__c.field-meta.xml
<CustomField>
    <fullName>FNS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_TrackingItemStatus</valueSetName>
    </valueSet>
</CustomField>