force-app/main/default/objects/Activity/fields/FNS_TrackingItemExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_TrackingItemExtId__c</fullName>
    <externalId>true</externalId>
    <label>Tracking Item External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>