force-app/main/default/objects/Activity/fields/FNS_TrackStatusId__c.field-meta.xml
<CustomField>
    <fullName>FNS_TrackStatusId__c</fullName>
    <label>Track Status Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>