force-app/main/default/objects/Activity/fields/FNS_Type__c.field-meta.xml
<CustomField>
    <fullName>FNS_Type__c</fullName>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>