force-app/main/default/objects/Activity/fields/FNS_UserExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_UserExtId__c</fullName>
    <label>User External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>