force-app/main/default/objects/Activity/fields/FNS_UserRecordIds__c.field-meta.xml
<CustomField>
    <fullName>FNS_UserRecordIds__c</fullName>
    <label>User Record Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>